Adds support for second navbar style

--- a/css/01/sections.css
+++ b/css/01/sections.css
@@ -1,5 +1,6 @@
 section {
-    /* margin: 60pt; */
-    padding: 40pt 40pt 0 40pt;
-    scroll-margin-top: 60pt;
+    margin: 0 80pt 0 80pt;
+    padding: 20pt 40pt 20pt 40pt;
+    scroll-margin-top: 80pt;
 }
+
