--- a/css/01/sections.css
+++ b/css/01/sections.css
@@ -4,3 +4,17 @@ section {
     scroll-margin-top: 80pt;
 }
 
+.section-title {
+    font-family: "Patua One", serif;
+    font-size: 18pt;
+    font-weight: 400;
+    font-style: normal;
+}
+
+section:nth-of-type(odd) {
+    background-color: aliceblue;
+}
+
+section:nth-of-type(even) {
+    background-color: cadetblue;
+}
