--- a/css/01/base-style.css
+++ b/css/01/base-style.css
@@ -20,3 +20,7 @@ section:first-of-type {
     margin-top: 80pt;
     /* margin-top: 100pt; */ /*80pt top + 20pt gap */
 }
+
+span {
+    display: block;
+}
