--- a/css/01/sections.css
+++ b/css/01/sections.css
@@ -23,11 +23,17 @@ section:nth-of-type(even) {
     background-color: cadetblue;
 }
 
-.description {
+.description, .details {
     /* font-family: 'IBM Plex Mono'; */
     margin: 0pt 20pt;
     font-family: "Zilla Slab", serif;
     font-size: 12pt;
+    line-height: 1.3;
+}
+
+.details {
+    margin: 20pt 20pt 20pt 20pt;
+    padding-left: 10pt;
 }
 
 .section-subheading {
