Adds scroll and navbar active selection
Clicking on link in navbar scrolls to element
Scrolling page changes navbar selection
Handles initial location hash

--- a/css/03/navbar.css
+++ b/css/03/navbar.css
@@ -89,11 +89,11 @@ navbar {
 
 }
 
-#links>a:hover {
+#links>a:hover, #links>a.active-section {
     color: #E2E8F0;
     transition: 0.2s;
 }
-#links>a:hover::before {
+#links>a:hover::before, #links>a.active-section::before {
     background-color: #E2E8F0D0;
     height:2px;
     width: 48pt;
