--- a/css/03/sections.css
+++ b/css/03/sections.css
@@ -1,19 +1,120 @@
 section {
-    margin: 0 80pt 0 80pt;
-    padding: 20pt 40pt 20pt 40pt;
+    padding: 0;
     scroll-padding: -1pt;
+    /* scroll-padding: 54pt; */
+    margin-bottom: 108pt;
 }
 .sub-section {
-    margin: 15pt 20pt 15pt 20pt;
+    /* margin: 15pt 20pt 15pt 20pt; */
     display: block;
 }
 
 .section-title {
-    font-family: "Zilla Slab", serif;
-    font-size: 18pt;
-    font-weight: 600;
-    font-style: normal;
+    display: none;
 }
+
+#about {
+    background-color: #FFF0;
+}
+
+#about>.description {
+    margin:0;
+    color: #94A3B8;
+}
+
+#about {
+    margin-right: 40pt;
+}
+
+#about>.description:not(:last-child) {
+    margin-bottom: 12pt;
+}
+
+#education {
+    background-color: #FFF0;
+    /* background-color: aliceblue; */
+
+}
+
+#education>div {
+    background-color: burlywood;
+    margin: 20pt;
+    width: calc(100%+40pt);
+    margin-left:-20pt;
+    border-radius: 4pt;
+    /* margin-right:20pt; */
+    padding-top:10pt;
+    padding-left:20pt;
+    padding-right: 20pt;
+    padding-bottom: 10pt;
+    display: block;
+    transition: 0.5s;
+}
+
+#education>div:hover {
+    background-color: #FFFFFF40;
+    transition: 0.5s;
+
+    .ne-arrow {
+        display: inline-block;
+        font-size: 10pt;
+        transform: translateX(3pt) translateY(-3pt);
+        transition: 0.3s;
+    }
+}
+
+
+/* #education>div>span.location {
+    display: inline-block;
+} */
+
+/* #education>div>span.location::after {
+    content: "\2197";
+    margin-top: 10pt;
+    margin-bottom: 20pt;
+    margin-left: 20pt;
+    padding-bottom:20pt;
+    display: inline-block;
+} */
+
+#education>div>div {
+    /* margin-top:-125pt; */
+    min-height: 125pt;
+    display: inline-block;
+    margin-right:125pt;
+}
+
+#education>div>div>h5 {
+    font-size: 13pt;
+    margin-bottom: 10pt;
+    font-weight: 400;
+    font-family: "Zilla Slab", serif;
+}
+
+#education>div>div>h5::after {
+    content: ":";
+}
+
+.sub-section>img {
+    margin-left:-120pt;
+    margin-right: 120pt;
+    margin-top: 10pt;
+    /* margin-bottom: 10pt; */
+    align-self: flex-end;
+    /* right: 0; */
+    /* bottom: 0; */
+    position: absolute;
+    display: inline-flex;
+    /* float: right; */
+    /* bottom: 0; */
+    /* bottom:110pt; */
+    right: 115pt;
+    margin-right:0;
+    width: 125pt;
+    height: 125pt;
+    /* display: none; */
+}
+
 
 section:nth-of-type(odd) {
     background-color: aliceblue;
@@ -24,11 +125,14 @@ section:nth-of-type(even) {
 }
 
 .description, .details {
-    /* font-family: 'IBM Plex Mono'; */
-    margin: 0pt 20pt;
-    font-family: "Zilla Slab", serif;
-    font-size: 12pt;
-    line-height: 1.3;
+    /* margin: 0pt 20pt; */
+    /* line-height: 1.3; */
+
+    font-size:12pt;
+    font-family: Inter, sans-serif;
+    /* color: #94A3B8; */ /*set this at the end*/
+    line-height: 1.5;
+    font-weight: 300; 
 }
 
 .details {
@@ -47,17 +151,32 @@ section:nth-of-type(even) {
 span.location {
     font-size: 12pt;
     display: inline-block;
-    /* font-style: italic; */
 }
 
 span.location::before {
     content: "- ";
 }
 
-span.location::after {
-    content: "";
+/* span.location::after {
+    content:"";
     display: block;
+} */
+
+.ne-arrow {
+    display: inline-block;
+    font-size: 11pt;
+    margin-left:8pt;
+    vertical-align: top;
+    transition: 0.3s;
 }
+
+/* .ne-arrow:hover {
+    display: inline-block;
+    font-size: 10pt;
+    vertical-align: top;
+    margin-left: 5pt;
+    transition: 0.3s;
+} */
 
 span.timeframe {
     text-align: end;
@@ -72,27 +191,3 @@ span.timeframe {
     margin-top: -18pt;
 }
 
-.sub-section>img {
-    margin-left:auto;
-    margin-top: 10pt;
-    display: block;
-    width: 125pt;
-    height: 125pt;
-}
-
-#education>div>div {
-    margin-top:-125pt;
-    min-height: 125pt;
-    margin-right:125pt;
-}
-
-#education>div>div>h5 {
-    font-size: 13pt;
-    margin-bottom: 10pt;
-    font-weight: 400;
-    font-family: "Zilla Slab", serif;
-}
-
-#education>div>div>h5::after {
-    content: ":";
-}
