--- a/css/03/sections.css
+++ b/css/03/sections.css
@@ -1,11 +1,9 @@
 section {
     padding: 0;
     scroll-padding: -1pt;
-    /* scroll-padding: 54pt; */
     margin-bottom: 108pt;
 }
 .sub-section {
-    /* margin: 15pt 20pt 15pt 20pt; */
     display: block;
 }
 
@@ -32,8 +30,6 @@ section {
 
 #education {
     background-color: var(--temporary-bg);
-    /* background-color: aliceblue; */
-
 }
 
 #education>div {
@@ -41,22 +37,24 @@ section {
     margin: 20pt;
     width: calc(100%+40pt);
     margin-left:-20pt;
-    border-radius: 4pt;
+    border-radius: 3pt;
     /* margin-right:20pt; */
     padding-top:10pt;
     padding-left:20pt;
     padding-right: 20pt;
     padding-bottom: 10pt;
     display: block;
+    z-index:0;
     transition: 0.2s;
 }
 
 #education>div:hover {
-    box-shadow: 0 3pt 6pt 0,rgba(0,0,0,0.16);
+    /* box-shadow: 0 3pt 6pt 0,rgba(0,0,0,0.16); */
     background-color: var(--hover-box-shadow);
+    /* z-index: 4; */
     transition: 0.2s;
 
-    #education>div>h4.section-subheading {
+    h4.section-subheading {
         color: var(--highlight-orange);
     }
 
@@ -81,7 +79,7 @@ section {
 }
 
 #education>div>div>h5 {
-    font-size: 12pt;
+    font-size: 10.5pt;
     margin-bottom: 10pt;
     font-weight: 400;
     /* font-family: "Zilla Slab", serif; */
@@ -91,10 +89,13 @@ section {
     content: ":";
 }
 
+#iu>img {
+    margin-top:-20pt;
+}
 .sub-section>img {
     margin-left:-120pt;
     margin-right: 120pt;
-    margin-top: 10pt;
+    margin-top: -10pt;
     /* margin-bottom: 10pt; */
     align-self: flex-end;
     /* right: 0; */
@@ -112,19 +113,19 @@ section {
 }
 
 
-section:nth-of-type(odd) {
+/* section:nth-of-type(odd) {
     background-color: aliceblue;
 }
 
 section:nth-of-type(even) {
     background-color: cadetblue;
-}
+} */
 
 .description, .details {
     /* margin: 0pt 20pt; */
     /* line-height: 1.3; */
 
-    font-size:12pt;
+    font-size:10.5pt;
     font-family: Inter, sans-serif;
     /* color: #94A3B8; */ /*set this at the end*/
     line-height: 1.5;
@@ -140,7 +141,7 @@ section:nth-of-type(even) {
     display: inline-flex;
     margin: 0;
     color: var(--primary-white);
-    font-size: 16pt;
+    font-size: 12pt;
     font-weight: 400;
 }
 
@@ -154,11 +155,6 @@ span.location::before {
     content: "- ";
 }
 
-/* span.location::after {
-    content:"";
-    display: block;
-} */
-
 .ne-arrow {
     display: inline-block;
     font-size: 11pt;
@@ -167,24 +163,94 @@ span.location::before {
     color: var(--primary-white);
 }
 
-/* .ne-arrow:hover {
-    display: inline-block;
-    font-size: 10pt;
-    vertical-align: top;
-    margin-left: 5pt;
-    transition: 0.3s;
+/* #experience>div, #projects>div {
+    background-color: var(--working-bg);
 } */
 
-span.timeframe {
-    text-align: end;
-    margin-top: -32pt;
+
+section>div {
+    background-color: var(--temporary-bg);
+    margin: 20pt;
+    width: calc(100%+40pt);
+    margin-left:-20pt;
+    border-radius: 3pt;
+    /* margin-right:20pt; */
+    padding-top:10pt;
+    padding-left:20pt;
+    padding-right: 20pt;
+    padding-bottom: 10pt;
+    display: block;
+    transition: 0.2s;
 }
 
-.sub-section>div>span.timeframe {
-    margin-top: -16pt;
+section>div:hover {
+    box-shadow: 0 3pt 6pt 0,rgba(0,0,0,0.16);
+    background-color: var(--hover-box-shadow);
+    transition: 0.2s;
+
+    h4.section-subheading {
+        color: var(--highlight-orange);
+    }
+
+    .location, .section-subheading {
+        color: var(--highlight-orange);
+    }
+
+    .ne-arrow {
+        display: inline-block;
+        font-size: 11pt;
+        /* margin-bottom:1pt; */
+        transform: translateX(6pt) translateY(-6pt);
+        transition: 0.3s;
+        color:var(--highlight-orange);
+    }
 }
 
-#projects>div>span.timeframe {
-    margin-top: -18pt;
+#experience>div>div>span.timeframe {
+    margin-top:-12pt;
+    /* margin-left:-5pt; */
+    text-transform: uppercase;
+    font-size:9pt;
+    color: var(--inactive-color);
+    font-weight: 700;
+    /* letter-spacing: 1px; */
+    transition: 0.2s;
 }
 
+#experience>div>.section-subheading {
+    margin-left: 110pt;
+}
+
+#experience>div>div>span:not(.timeframe) {
+    margin-left: 110pt;
+}
+
+#experience>div>div>div {
+    margin-left: 90pt;
+
+    /* ul:first-of-type {
+        margin-top: 20pt;
+    }
+
+    ul:last-of-type {
+        margin-bottom: 20pt;
+    } */
+
+    ul {
+        color: var(--text-color);
+        margin-right: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+        font-size: 11pt;
+        line-height: 1.4;
+        /* text-align: justify; */
+    }
+}
+#projects>div>div>ul {
+    color: var(--text-color);
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 11pt;
+    line-height: 1.4;
+}
